[gd_scene load_steps=37 format=3 uid="uid://bi0qkiv7i6wn7"]

[ext_resource type="Script" path="res://Scripts/Game/game.gd" id="1_oddul"]
[ext_resource type="PackedScene" uid="uid://dgw1v4cts10ue" path="res://Scenes/player.tscn" id="2_d2tic"]
[ext_resource type="PackedScene" uid="uid://bdmy3lue8kh57" path="res://Scenes/puck.tscn" id="3_084px"]
[ext_resource type="Script" path="res://Scripts/Game/Ice.gd" id="3_ibexc"]
[ext_resource type="PackedScene" uid="uid://dn22n4k2ff23i" path="res://Scenes/redline.tscn" id="3_q7evj"]
[ext_resource type="PackedScene" uid="uid://bjmw12u4pn1rr" path="res://Scenes/ice.tscn" id="4_whc5v"]
[ext_resource type="PackedScene" uid="uid://b2wvpdttswyui" path="res://Scenes/boards.tscn" id="5_05yok"]
[ext_resource type="Texture2D" uid="uid://1jaeplvdxpur" path="res://Sprites/BackgroundSprites/redline.bmp" id="5_qha0b"]
[ext_resource type="Texture2D" uid="uid://ctnglpy0gidg1" path="res://Sprites/BackgroundSprites/centerice.bmp" id="6_r5ybu"]
[ext_resource type="Script" path="res://Scripts/Game/CenterIceLogo.gd" id="7_cttf6"]
[ext_resource type="Texture2D" uid="uid://c1ppumxd0orle" path="res://Sprites/BackgroundSprites/goaliecrease.bmp" id="8_o42ed"]
[ext_resource type="PackedScene" uid="uid://bp6dj0wuu813j" path="res://Scenes/goal_light.tscn" id="10_8tngk"]
[ext_resource type="FontFile" uid="uid://dnrd8fh6dkda8" path="res://Resources/m5x7.ttf" id="12_vgiad"]
[ext_resource type="Script" path="res://Scripts/UI/GameUI/UserInterface.gd" id="13_p207g"]
[ext_resource type="Texture2D" uid="uid://dxxeild4tycr2" path="res://Sprites/UISprites/scoreboard.bmp" id="14_1ibud"]
[ext_resource type="Script" path="res://Scripts/Game/goal_light.gd" id="16_bu6nx"]
[ext_resource type="Script" path="res://Scripts/UI/GameUI/TimeDisplay.gd" id="17_gun7a"]
[ext_resource type="Script" path="res://Scripts/UI/GameUI/GameClock.gd" id="18_jwlo5"]
[ext_resource type="Script" path="res://Scripts/Game/P1Score.gd" id="19_lmo6v"]
[ext_resource type="Script" path="res://Scripts/Game/P2Score.gd" id="20_ajges"]
[ext_resource type="Texture2D" uid="uid://bpciv185dras" path="res://Sprites/UISprites/game_alert.bmp" id="21_n1r4v"]
[ext_resource type="Script" path="res://Scripts/UI/GameUI/GameAlert.gd" id="22_7imrs"]
[ext_resource type="Texture2D" uid="uid://cungr0elfxvlh" path="res://Sprites/UISprites/goal_alert.bmp" id="23_qmvyy"]
[ext_resource type="Script" path="res://Scripts/UI/GameUI/GoalAlert.gd" id="24_qcl47"]
[ext_resource type="PackedScene" uid="uid://bsxk2cr4us580" path="res://Scenes/MainScenes/pause_menu.tscn" id="24_u37gx"]
[ext_resource type="Script" path="res://Scripts/UI/GameUI/GoalAlertLabel.gd" id="25_l37b4"]
[ext_resource type="PackedScene" uid="uid://d2ox4wf2wgmad" path="res://Scenes/MainScenes/end_game_menu.tscn" id="25_py3oa"]
[ext_resource type="Script" path="res://Scripts/UI/GameUI/GameAlertLabel.gd" id="26_dggg2"]
[ext_resource type="Texture2D" uid="uid://tswxnfqriv4g" path="res://Sprites/playerInfoSprites/boost_bar_regen.bmp" id="27_3c1yj"]
[ext_resource type="Script" path="res://Scripts/UI/end_game_menu.gd" id="29_y0hqd"]
[ext_resource type="Script" path="res://Scripts/UI/GameUI/SeriesInfoLabel.gd" id="31_sxgga"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7hg4b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_prnau"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bowmq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_elutc"]

[sub_resource type="Theme" id="Theme_kwpcf"]
default_font = ExtResource("12_vgiad")
default_font_size = 50

[node name="Game" type="Node2D"]
script = ExtResource("1_oddul")

[node name="Background" type="Node2D" parent="."]
position = Vector2(576, 324)

[node name="Ice Surface" parent="Background" instance=ExtResource("4_whc5v")]
scale = Vector2(72, 40.5)

[node name="Ice" type="Node2D" parent="Background"]
script = ExtResource("3_ibexc")

[node name="GoallineLeft" parent="Background/Ice" instance=ExtResource("3_q7evj")]
position = Vector2(-569, 0)
scale = Vector2(0.87, 30)
texture = ExtResource("5_qha0b")

[node name="GoallineRight" parent="Background/Ice" instance=ExtResource("3_q7evj")]
position = Vector2(569, 0)
scale = Vector2(0.87, 30)
texture = ExtResource("5_qha0b")

[node name="CenterIceOutline" type="Sprite2D" parent="Background/Ice"]
scale = Vector2(10, 10)
texture = ExtResource("6_r5ybu")

[node name="CenterIceLogo" type="Sprite2D" parent="Background/Ice"]
scale = Vector2(10, 10)
hframes = 32
script = ExtResource("7_cttf6")

[node name="CreaseRight" type="Sprite2D" parent="Background/Ice"]
position = Vector2(467, 0)
rotation = 4.71239
scale = Vector2(10, 10)
texture = ExtResource("8_o42ed")

[node name="CreaseLeft" type="Sprite2D" parent="Background/Ice"]
position = Vector2(-467, 0)
rotation = 1.5708
scale = Vector2(10, 10)
texture = ExtResource("8_o42ed")

[node name="Boards" type="Node2D" parent="Background"]

[node name="Bottom" parent="Background/Boards" instance=ExtResource("5_05yok")]
position = Vector2(0, 250)
scale = Vector2(57.6, 0.7)

[node name="Top" parent="Background/Boards" instance=ExtResource("5_05yok")]
position = Vector2(0, -250)
scale = Vector2(57.6, 0.7)

[node name="LeftTop" parent="Background/Boards" instance=ExtResource("5_05yok")]
position = Vector2(-569, -175)
scale = Vector2(0.7, 7)

[node name="LeftBottom" parent="Background/Boards" instance=ExtResource("5_05yok")]
position = Vector2(-569, 175)
scale = Vector2(0.7, 7)

[node name="RightTop" parent="Background/Boards" instance=ExtResource("5_05yok")]
position = Vector2(569, -175)
scale = Vector2(0.7, 7)

[node name="RightBottom" parent="Background/Boards" instance=ExtResource("5_05yok")]
position = Vector2(569, 175)
scale = Vector2(0.7, 7)

[node name="PlayerBlockerLeft" type="StaticBody2D" parent="Background/Boards"]
position = Vector2(-569, 35)
scale = Vector2(0.75, 11.2)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Boards/PlayerBlockerLeft"]
position = Vector2(0, -3)
scale = Vector2(0.94, 1)
shape = SubResource("RectangleShape2D_7hg4b")

[node name="StaticBody2D" type="StaticBody2D" parent="Background/Boards"]
position = Vector2(569, 35)
scale = Vector2(0.75, 11.2)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Boards/StaticBody2D"]
position = Vector2(0, -3)
scale = Vector2(0.94, 1)
shape = SubResource("RectangleShape2D_prnau")

[node name="GoalDetectorLeft" type="Area2D" parent="Background"]
position = Vector2(0, -30)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/GoalDetectorLeft"]
position = Vector2(-645, 35)
scale = Vector2(1, 29)
shape = SubResource("RectangleShape2D_bowmq")

[node name="GoalDetectorRight" type="Area2D" parent="Background"]
position = Vector2(0, -30)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/GoalDetectorRight"]
position = Vector2(645, 35)
scale = Vector2(1, 29)
shape = SubResource("RectangleShape2D_elutc")

[node name="Player1" parent="." instance=ExtResource("2_d2tic")]
position = Vector2(300, 324)
move_left = "leftp1"
move_right = "rightp1"
move_up = "upp1"
move_down = "downp1"
boost = "boostp1"

[node name="Player2" parent="." instance=ExtResource("2_d2tic")]
position = Vector2(852, 324)
move_left = "leftp2"
move_right = "rightp2"
move_up = "upp2"
move_down = "downp2"
boost = "boostp2"

[node name="Puck" parent="." instance=ExtResource("3_084px")]
position = Vector2(576, 324)

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_kwpcf")
script = ExtResource("13_p207g")

[node name="Scoreboard" type="Sprite2D" parent="UserInterface"]
position = Vector2(576, 42)
scale = Vector2(10, 10)
texture = ExtResource("14_1ibud")

[node name="GoalLightP1" parent="UserInterface" instance=ExtResource("10_8tngk")]
position = Vector2(295, 35)
scale = Vector2(4, 4)
frame_progress = 0.972638
script = ExtResource("16_bu6nx")

[node name="GoalLightP2" parent="UserInterface" instance=ExtResource("10_8tngk")]
position = Vector2(857, 35)
scale = Vector2(4, 4)
script = ExtResource("16_bu6nx")

[node name="TimeDisplay" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 520.0
offset_top = 16.0
offset_right = 632.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "1:30"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("17_gun7a")

[node name="GameClock" type="Timer" parent="UserInterface/TimeDisplay"]
wait_time = 5.0
one_shot = true
script = ExtResource("18_jwlo5")

[node name="P1Score" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 464.0
offset_top = 16.0
offset_right = 512.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("19_lmo6v")

[node name="P2Score" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 640.0
offset_top = 16.0
offset_right = 696.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("20_ajges")

[node name="GameAlert" type="Sprite2D" parent="UserInterface"]
position = Vector2(576, 106)
scale = Vector2(10, 10)
texture = ExtResource("21_n1r4v")
script = ExtResource("22_7imrs")

[node name="GoalAlert" type="Sprite2D" parent="UserInterface"]
position = Vector2(100, -40)
scale = Vector2(10, 10)
texture = ExtResource("23_qmvyy")
script = ExtResource("24_qcl47")

[node name="GoalAlertP1Label" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 344.0
offset_top = 80.0
offset_right = 512.0
offset_bottom = 128.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "GOAL!"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("25_l37b4")

[node name="GoalAlertP2Label" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 640.0
offset_top = 80.0
offset_right = 808.0
offset_bottom = 128.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "GOAL!"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("25_l37b4")

[node name="GameAlertLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 456.0
offset_top = 72.0
offset_right = 696.0
offset_bottom = 136.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
script = ExtResource("26_dggg2")

[node name="P1TeamLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 344.0
offset_top = 19.0
offset_right = 449.0
offset_bottom = 62.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="P2TeamLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 703.0
offset_top = 19.0
offset_right = 809.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseMenu" parent="UserInterface" instance=ExtResource("24_u37gx")]
process_mode = 3
layout_mode = 1
offset_left = 550.0
offset_top = 303.0
offset_right = 550.0
offset_bottom = 303.0
scale = Vector2(1.5, 1.5)

[node name="EndGameMenu" parent="UserInterface" instance=ExtResource("25_py3oa")]
layout_mode = 1
offset_left = 550.0
offset_top = 355.0
offset_right = 550.0
offset_bottom = 355.0
scale = Vector2(1.5, 1.5)
script = ExtResource("29_y0hqd")

[node name="P1BoostMeter" type="Sprite2D" parent="UserInterface"]
position = Vector2(114, 615)
scale = Vector2(5, 5)
texture = ExtResource("27_3c1yj")
hframes = 37

[node name="P1BoostLabel" type="Label" parent="UserInterface/P1BoostMeter"]
offset_left = 22.0
offset_top = -5.0
offset_right = 62.0
offset_bottom = 15.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("12_vgiad")
text = "120"
vertical_alignment = 1

[node name="P2BoostMeter" type="Sprite2D" parent="UserInterface"]
position = Vector2(1038, 615)
rotation = 3.14159
scale = Vector2(5, 5)
texture = ExtResource("27_3c1yj")
hframes = 37

[node name="P2BoostLabel" type="Label" parent="UserInterface/P2BoostMeter"]
offset_left = 42.0
offset_top = 5.0
offset_right = 82.0
offset_bottom = 25.0
rotation = 3.14159
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("12_vgiad")
text = "120
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SeriesInfoLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 288.0
offset_top = 593.0
offset_right = 862.0
offset_bottom = 637.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("31_sxgga")

[connection signal="body_entered" from="Background/GoalDetectorLeft" to="." method="_on_goal_detector_left_body_entered"]
[connection signal="body_entered" from="Background/GoalDetectorLeft" to="Player1" method="_on_goal_detector_left_body_entered"]
[connection signal="body_entered" from="Background/GoalDetectorLeft" to="Player2" method="_on_goal_detector_left_body_entered"]
[connection signal="body_entered" from="Background/GoalDetectorLeft" to="Puck" method="_on_goal_detector_left_body_entered"]
[connection signal="body_entered" from="Background/GoalDetectorLeft" to="UserInterface" method="_on_goal_detector_left_body_entered"]
[connection signal="body_entered" from="Background/GoalDetectorRight" to="." method="_on_goal_detector_right_body_entered"]
[connection signal="body_entered" from="Background/GoalDetectorRight" to="Player1" method="_on_goal_detector_right_body_entered"]
[connection signal="body_entered" from="Background/GoalDetectorRight" to="Player2" method="_on_goal_detector_right_body_entered"]
[connection signal="body_entered" from="Background/GoalDetectorRight" to="Puck" method="_on_goal_detector_right_body_entered"]
[connection signal="body_entered" from="Background/GoalDetectorRight" to="UserInterface" method="_on_goal_detector_right_body_entered"]
[connection signal="timeout" from="UserInterface/TimeDisplay/GameClock" to="." method="_on_game_clock_timeout"]
[connection signal="timeout" from="UserInterface/TimeDisplay/GameClock" to="UserInterface/TimeDisplay" method="_on_game_clock_timeout"]
